Fix button alignmetn on TransactionList component

--- a/src/app/components/transactions/TransactionList.scss
+++ b/src/app/components/transactions/TransactionList.scss
@@ -43,6 +43,7 @@ table {
 
       &:last-child {
         padding-right: 12px;
+        text-align: right;
       }
     }
   }
